<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    android:scrollbarStyle="insideOverlay"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_move_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pindah_activity"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="66dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_move_activity_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pindah Activity dengan Data"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="178dp" />

            <Button
                android:id="@+id/btn_move_object"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Pindah Activity Object"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="270dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/btn_dial_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dial Number"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="364dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/penyimpanan_lokal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Penyimpanan Lokal"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                tools:layout_editor_absoluteX="161dp"
                tools:layout_editor_absoluteY="454dp"
                tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/sound_pool"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Sound Pool"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/recycle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recycle_view"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/sharepreference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shared_preference"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/HitungActivity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menghitung_luas"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

            <Button
                android:id="@+id/MyNotesApp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notes_app"
                android:layout_marginBottom="@dimen/activity_vertical_margin"/>

        </LinearLayout>

    </ScrollView>


</LinearLayout>